artifacthub/library/general/requiredprobes/1.1.0/samples/must-have-probes-on-service/example_allowed_without_service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod1
  namespace: default
  labels:
    app.kubernetes.io/name: tomcat-no-svc
    second-label: "example"
spec:
  containers:
  - name: tomcat
    image: tomcat
    ports:
    - containerPort: 8080
  volumes:
  - name: cache-volume
    emptyDir: {}
